replace gujava fluentiterable with java 8 lambdas