@@ -3,6 +3,7 @@ package pl.arczynskiadam.security.impl;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
+import java.util.stream.Collectors;
 
 import org.springframework.beans.factory.annotation.Required;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
@@ -12,13 +13,10 @@ import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.transaction.annotation.Transactional;
 
-import pl.arczynskiadam.core.model.UserRoleModel;
 import pl.arczynskiadam.core.model.RegisteredUserModel;
+import pl.arczynskiadam.core.model.UserRoleModel;
 import pl.arczynskiadam.core.service.UserService;
 import pl.arczynskiadam.web.SecurityConstants;
-
-import com.google.common.base.Function;
-import com.google.common.collect.FluentIterable;
 
 public class DefaultUserDetailsService implements UserDetailsService {
 
@@ -33,8 +31,8 @@ public class DefaultUserDetailsService implements UserDetailsService {
 	        throw new UsernameNotFoundException("User for username " + userName + "was not found.");
 	    }
 	 
-	    List<String> permissions = FluentIterable.from(user.getUserRoles()).transform(toPermission()).toList();
-	 
+	    List<String> permissions = user.getUserRoles().stream().map(UserRoleModel::getRole).collect(Collectors.toList());
+	    
 	    if(permissions.isEmpty()) {
 	        throw new UsernameNotFoundException(userName + "has no permissions.");
 	    }
@@ -47,16 +45,6 @@ public class DefaultUserDetailsService implements UserDetailsService {
 	 
 	    String plain = user.getPasswordSalt().concat(SecurityConstants.DELIMITER).concat(user.getPasswordHash());
 	    return new User(user.getNick(), plain, true, true, true, true, authorities);
-	}
-	
-	private Function<UserRoleModel, String> toPermission() {
-		return new Function<UserRoleModel, String>() {
-			
-			@Override
-			public String apply(UserRoleModel arg0) {
-				return arg0.getRole();
-			}
-		};
 	}
 
 	public UserService getUserService() {
